[tool.poetry]
name = "simulations-notebooks"
version = "0.10"
description = "Network effect in observational studies estimation"
authors = ["polina.revina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.1.1"
networkx = "^3.3"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pymatch = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
